--- a/src/app.scss
+++ b/src/app.scss
@@ -1,14 +1,14 @@
-.App {
+.app {
   text-align: center;
+  min-height: 100vh;
 }
 
-.App-logo {
+.app-logo {
   height: 40vmin;
 }
 
-.App-header {
+.app-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +17,6 @@
   color: white;
 }
 
-.App-link {
+.app-link {
   color: #09d3ac;
 }
