--- a/src/app.scss
+++ b/src/app.scss
@@ -18,5 +18,22 @@
 }
 
 .app-link {
-  color: #09d3ac;
+  &-tomato {
+    color: tomato;
+    &:hover {
+    color:yellowgreen;
+    }
+  }
+
+  &-yellowgreen {
+    color: yellowgreen;
+    &:hover {
+      color:tomato;
+      }
+  }
+}
+
+.app-content {
+  color: #282c34;
+  font-size: calc(10px + 2vmin);
 }
