--- a/src/app.scss
+++ b/src/app.scss
@@ -15,6 +15,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  min-height: 50vh;
+  &-child {
+    min-width: 130px;
+  }
 }
 
 .app-link {
