--- a/src/pages/foreign-land/foreign-land.scss
+++ b/src/pages/foreign-land/foreign-land.scss
@@ -1,3 +1,11 @@
 .foreign-land {
     background-color: tomato;
 }
+
+.countdown {
+ .box {
+  height: 46px;
+  width: 49px;
+  background-color: rgba(12, 12, 30, 0.42);
+ }
+}
